# Real-time_Sales_Data_Analysis

./: .gitignore  Makefile  README.md  config.py  create_db_schema.py  database.ini  dataset.py  docker-compose.yml  sales_data_generator.py  spark_streaming.py
apps/pipeline/: Dockerfile  pyproject.toml  requirements.txt
apps/pipeline/src/: dags.py  kafka_trigger.py  requirements.txt  spark_batch.py  spark_streaming.py  test.py
cluster/apps/superset/: values.yaml
config/: kafka-server-start.sh  zookeeper-start.sh
superset/: .bash_history
